--- a/files/page1230128body.html
+++ b/files/page1230128body.html
@@ -148,6 +148,7 @@
             <ul class="t228__list t228__list_hidden">
                         <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/" target="_blank" style="color:#ffffff;font-weight:600;" data-menu-item-number="1">Главная</a></li>
                         <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/pm" target="_blank" style="color:#ffffff;font-weight:600;" data-menu-item-number="2">Управление проектами</a></li>
+                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/about"  style="color:#ffffff;font-weight:600;" data-menu-item-number="3">О нас</a></li>
                     
                         </ul>
             </div>
