--- a/files/page1318394body.html
+++ b/files/page1318394body.html
@@ -1,7 +1,7 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1318394" data-tilda-page-alias="zkh/o_prilozenii" data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
-<div id="rec28365672" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<div id="rec28365672" class="r t-rec t-rec_pt_75 t-rec_pb_75" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
 <!-- T422 -->
 <div class="t422">
   <div class="t422__container t-container">
@@ -50,12 +50,12 @@ $('.t422').bind('displayChanged',function(){
 </div>
 
 
-<div id="rec27507550" class="r" style="padding-top:28px;padding-bottom:28px; "  data-record-type="40"   >
+<div id="rec27507550" class="r t-rec t-rec_pt_30 t-rec_pb_30" style="padding-top:30px;padding-bottom:30px; "  data-record-type="40"   >
 <!-- T026 -->
 <div class="t026">
   <div class="t-container t-align_left">
     <div class="t-col t-col_8 t-prefix_2">      
-      <div class="t026__title t-text" field="title" style="">Приложение «Правовой навигатор: ЖКХ» разработано при грантовой поддержке Министерства региональной политики Новосибирской области.<br /></div>
+      <div class="t026__title t-text" field="title" style="">Приложение «Правовой навигатор: ЖКХ» разработано при поддержке Министерства региональной политики Новосибирской области и Управления общественных связей мэрии г.Новосибирска. Проект реализован при содействии Главы попечительского совета Фонда «Развитие», депутата Законодательного Собрания Новосибирской области Зозули Юрия Викторовича <br /></div>
       <div class="t026__descr t-text t-text_xs" field="subtitle" style="text-transform:uppercase;"><strong>В Приложении содержится информация правового характера по вопросам в сфере жилищно-коммунального хозяйства.<br /><br />Приложение включает в себя 10 информационно-справочных (пособий) <br />по отдельным правовым вопросам в сфере ЖКХ.</strong></div>
     </div>
   </div>
@@ -63,7 +63,7 @@ $('.t422').bind('displayChanged',function(){
 </div>
 
 
-<div id="rec27507552" class="r" style="padding-top:0px;padding-bottom:60px; "  data-record-type="106"   >
+<div id="rec27507552" class="r t-rec t-rec_pt_0 t-rec_pb_60" style="padding-top:0px;padding-bottom:60px; "  data-record-type="106"   >
 <!-- T004 -->
 <div class="t004">
 	<div class="t-container ">
@@ -75,7 +75,7 @@ $('.t422').bind('displayChanged',function(){
 </div>
 
 
-<div id="rec28365982" class="r" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
+<div id="rec28365982" class="r t-rec t-rec_pt_75 t-rec_pb_75" style="padding-top:75px;padding-bottom:75px; " data-animationappear="off" data-record-type="422"   >
 <!-- T422 -->
 <div class="t422">
   <div class="t422__container t-container">
@@ -124,7 +124,7 @@ $('.t422').bind('displayChanged',function(){
 </div>
 
 
-<div id="rec28365278" class="r" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
+<div id="rec28365278" class="r t-rec t-rec_pt_0 t-rec_pb_15" style="padding-top:0px;padding-bottom:15px; "  data-record-type="191"   >
 <!-- T142 -->
 <div class="t142">
 	<div class="t-container_100">
