--- a/files/page1168382body.html
+++ b/files/page1168382body.html
@@ -1,7 +1,7 @@
 <!--allrecords-->
 <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="293604" data-tilda-page-id="1168382"  data-tilda-formskey="970f9e2c6c552c5b2a73c4b3835258a7" >
 
-<div id="rec25928906" class="r" style=" " data-animationappear="off" data-record-type="14"   >
+<div id="rec25928906" class="r t-rec" style=" " data-animationappear="off" data-record-type="14"   >
 <!-- cover -->
 	
 
@@ -30,7 +30,7 @@
 </div>
 
 
-<div id="rec25943712" class="r" style=" " data-animationappear="off" data-record-type="257"   >
+<div id="rec25943712" class="r t-rec" style=" " data-animationappear="off" data-record-type="257"   >
 
 
 <!-- T228 -->
@@ -47,8 +47,10 @@
           <div class="t228__centerside ">
                         <div class="t228__centercontainer">
             <ul class="t228__list t228__list_hidden">
-                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/" target="_blank" style="color:#ffffff;font-weight:600;" data-menu-item-number="1">Главная</a></li>
-                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/pm" target="_blank" style="color:#ffffff;font-weight:600;" data-menu-item-number="2">Управление проектами</a></li>
+                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/"  style="color:#ffffff;font-weight:600;" data-menu-item-number="1">Главная</a></li>
+                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/pm"  style="color:#ffffff;font-weight:600;" data-menu-item-number="2">Управление проектами</a></li>
+                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/seo"  style="color:#ffffff;font-weight:600;" data-menu-item-number="3">Продвижение сайтов</a></li>
+                        <li class="t228__list_item"><a class="t-menu__link-item" href="http://siberia1.ru/about"  style="color:#ffffff;font-weight:600;" data-menu-item-number="4">О нас</a></li>
                     
                         </ul>
             </div>
